Fix inspector with variables enabled and enable inspector variables tests by default. https://bugs.webkit.org/show_bug.cgi?id=94296

Reviewed by Hajime Morita.

Source/WebCore:

Change from using getPropertyName static function to CSSProperty::cssName(), which can resolve variables if needed.

Covered by inspector/styles/variables.

* css/PropertySetCSSStyleDeclaration.cpp:
(WebCore::PropertySetCSSStyleDeclaration::item):

LayoutTests:

Fix paths to included javascript and enable tests by default on Chromium port.

* inspector/styles/variables/css-variables.html:
* platform/chromium/TestExpectations:


git-svn-id: svn://svn.chromium.org/blink/trunk@126118 bbb929c8-8fbe-4397-9dbb-9b2b20218538