third_party/WebKit/Source/WebCore/css/PropertySetCSSStyleDeclaration.cpp
@@ -128,7 +128,7 @@ void PropertySetCSSStyleDeclaration::ref()
 }
 
 void PropertySetCSSStyleDeclaration::deref()
-{ 
+{
     m_propertySet->deref(); 
 }
 
@@ -149,7 +149,7 @@ String PropertySetCSSStyleDeclaration::item(unsigned i) const
 {
     if (i >= m_propertySet->propertyCount())
         return "";
-    return getPropertyNameString(m_propertySet->propertyAt(i).id());
+    return m_propertySet->propertyAt(i).cssName();
 }
 
 String PropertySetCSSStyleDeclaration::cssText() const
